XMLtoCSV/objects/unpackaged/objects/Site_vod__c.object
<CustomObject>
    <description>Object that contains information about the websites which host multichannel content</description>
    <fields>
        <fullName>Error_Message_vod__c</fullName>
        <description>Will be displayed if the player/content cannot be rendered.</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Indicates the Language that the Related Content should display in.</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Content_vod__c</fullName>
        <description>Indicates where the Related Content Container will appear in relation to the Engage Player.</description>
        <label>Related Content</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Right_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_vod__c</fullName>
        <description>URL of the webpage which is hosting the Engage Player</description>
        <externalId>true</externalId>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <recordTypes>
        <fullName>Engage_vod</fullName>
        <active>true</active>
        <description>For sites which host the Engage player</description>
        <label>Engage_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>